tests/ui/suggestions/suggest-call-on-pat-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/suggest-call-on-pat-mismatch.rs:7:12
   |
LL |     if let E::One(var1, var2) = var {
   |            ^^^^^^^^^^^^^^^^^^   --- this expression has type `{fn item E::One: fn(i32, i32) -> E}`
   |            |
   |            expected enum constructor, found `E`
   |
   = note: expected enum constructor `{fn item E::One: fn(i32, i32) -> E}`
                          found enum `E`
help: use parentheses to construct this tuple variant
   |
LL |     if let E::One(var1, var2) = var(/* i32 */, /* i32 */) {
   |                                    ++++++++++++++++++++++

error[E0308]: mismatched types
  --> $DIR/suggest-call-on-pat-mismatch.rs:13:9
   |
LL |     let Some(x) = Some;
   |         ^^^^^^^   ---- this expression has type `{fn item Option::<_>::Some: fn(_) -> Option<_>}`
   |         |
   |         expected enum constructor, found `Option<_>`
   |
   = note: expected enum constructor `{fn item Option::<_>::Some: fn(_) -> Option<_>}`
                          found enum `Option<_>`
help: use parentheses to construct this tuple variant
   |
LL |     let Some(x) = Some(/* value */);
   |                       +++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
